# VectorTest

./: .drone.yml  .gitignore  CMakeLists.txt  README.md  embuild.sh  emrun.sh  out.txt
assets/: Chest.aseprite  Knight.aseprite  dennis.aseprite  testmap.map
cmake/: FindSDL2.cmake  FindSDL2_gfx.cmake  FindSDL2_image.cmake
include/: AssetManager.hpp  Camera.hpp  Canvas.hpp  InputManager.hpp  RenderWindow.hpp  Scene.hpp  TileSet.hpp
include/Collision/: Collision.hpp
include/Entity/: Box.hpp  Entity.hpp  Player.hpp  Wall.hpp
include/Math/: Distance.hpp  Point.hpp  Vector.hpp
include/Scene/: Scene.hpp  TileMap.hpp
src/: AssetManager.cpp  Camera.cpp  Canvas.cpp  InputManager.cpp  RenderWindow.cpp  Scene.cpp  TileSet.cpp  main.cpp
src/Collision/: Collision.cpp
src/Entity/: Box.cpp  Entity.cpp  Player.cpp  Wall.cpp
src/Math/: Distance.cpp  Point.cpp  Vector.cpp
src/Scene/: Scene.cpp  Tilemap.cpp
